# machine-learning-zoomcamp-midterm-project

./: .gitignore  Dockerfile  README.md  notebook.ipynb  predict_client.py  predict_local.py  pyproject.toml  server.py  train.py
